tests/error/type_match/switch_expr_ambiguous.bz
function test(val: int32)
{
	let _ = switch (val) {
		0 => 0,
		1 => 1i64,
		else => 2i16,
	};
}
